# src/models/Invite.js
@@ -37,7 +37,7 @@ Invite.init(
             unique: true,
             defaultValue: () => Invite.generateToken(),
         },
-        expiresAt: {
+        expires_at: {
             type: DataTypes.DATE,
             allowNull: false,
             defaultValue: () => new Date(Date.now() + 7 * 24 * 60 * 60 * 1000), // 7 days from now
